[gd_scene load_steps=9 format=3 uid="uid://bc0lqrr8lxyjp"]

[ext_resource type="Material" uid="uid://d32fwk7do0h5f" path="res://main/character/shaders/color_glow.tres" id="1_1jhfm"]
[ext_resource type="Script" uid="uid://c7y87b3nkkgcj" path="res://main/character/abstract/character.gd" id="1_gep86"]
[ext_resource type="SpriteFrames" uid="uid://kbnturjafboi" path="res://main/character/character.tres" id="2_gx21m"]
[ext_resource type="PackedScene" uid="uid://cto67ynwdm2d4" path="res://main/FSM/state_machine.tscn" id="3_o64gn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ild5u"]
radius = 9.0
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_bop78"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_o64gn"]
offsets = PackedFloat32Array(0.29333332, 0.82)
colors = PackedColorArray(0, 0, 0, 0.7294118, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r4jqx"]
gradient = SubResource("Gradient_o64gn")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.3)
metadata/_snap_enabled = true

[node name="Character" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_gep86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ild5u")

[node name="Face" type="Node2D" parent="."]

[node name="Animation" type="AnimatedSprite2D" parent="Face"]
modulate = Color(1.5225214, 1.5225214, 1.5225214, 1)
material = ExtResource("1_1jhfm")
sprite_frames = SubResource("SpriteFrames_bop78")
animation = &"attack"

[node name="Effects" type="AnimatedSprite2D" parent="Face"]
modulate = Color(2.1074393, 2.1074393, 1.8652954, 1)
self_modulate = Color(1, 0.6392883, 0.54301727, 1)
z_index = 2
material = ExtResource("1_1jhfm")
sprite_frames = ExtResource("2_gx21m")
animation = &"collect"

[node name="Shadow" type="Sprite2D" parent="Face"]
z_index = -1
position = Vector2(0, 21.5)
scale = Vector2(1, 0.359375)
texture = SubResource("GradientTexture2D_r4jqx")

[node name="StateMachine" parent="." instance=ExtResource("3_o64gn")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_changed" from="Face/Animation" to="." method="_on_animation_animation_changed"]
[connection signal="animation_finished" from="Face/Animation" to="." method="_on_animation_animation_finished"]
